--- a/nyingest.csproj
+++ b/nyingest.csproj
@@ -5,12 +5,15 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <JsonSerializerIsReflectionEnabledByDefault>true</JsonSerializerIsReflectionEnabledByDefault>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Kelter.Forks.YoutubeTranscriptApi" Version="0.4.2" />
-      <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
-      <PackageReference Include="PdfPig" Version="0.1.11-alpha-20250413-58085" />
+        <PackageReference Include="Kelter.Forks.YoutubeTranscriptApi" Version="0.4.2"/>
+        <PackageReference Include="LibGit2Sharp" Version="0.31.0"/>
+        <PackageReference Include="PdfPig" Version="0.1.11-alpha-20250413-58085"/>
     </ItemGroup>
 
 </Project>
